--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@playform/compress": "^0.1.7",
+    "@tomic/lib": "^0.40.0",
     "astro": "^5.1.9",
     "astro-embed": "^0.9.0",
     "astro-og-canvas": "^0.5.5"
+  },
+  "devDependencies": {
+    "@tomic/cli": "^0.40.0"
   }
 }
