--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.0.7",
+    "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@playform/compress": "^0.1.7",
+    "@tailwindcss/vite": "^4.0.9",
     "@tomic/lib": "^0.40.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "astro": "^5.1.9",
     "astro-embed": "^0.9.0",
-    "astro-og-canvas": "^0.5.5"
+    "astro-og-canvas": "^0.5.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
-    "@tomic/cli": "^0.40.0"
+    "@tomic/cli": "^0.40.0",
+    "daisyui": "^5.0.0-beta.8"
   }
 }
