--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@nanostores/react": "^0.8.4",
     "@playform/compress": "^0.1.7",
     "@tailwindcss/vite": "^4.0.9",
     "@tomic/lib": "^0.40.0",
@@ -22,6 +27,7 @@
     "astro": "^5.1.9",
     "astro-embed": "^0.9.0",
     "astro-og-canvas": "^0.5.5",
+    "nanostores": "^0.11.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.9"
